--- a/css/styles.css
+++ b/css/styles.css
@@ -758,6 +758,12 @@ body.modal-open{ overflow:hidden; height:100vh; }
 }
 .premium-warning p{ margin:0; color:#92400e; font-weight:600; font-size:.9rem; }
 
+
+#confirm-credit-modal {
+z-index: 999 !important;
+}
+   
+
 #premium-modal .input-group label{ font-weight:600; }
 #premium-modal #premium-code-input{
   border-radius:8px !important;
