--- a/css/styles.css
+++ b/css/styles.css
@@ -771,6 +771,8 @@ z-index: 999 !important;
   padding:.75rem 1rem !important;
   font-size:1rem !important;
   font-weight:400 !important;
+
+   z-index: 99999 !important;
 }
 #premium-modal #premium-code-input:focus{ border-color:#16a34a !important; outline:none !important; }
 
